Ingress-controller/ingress-rules-apps/ingress-rules-vote.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - hosts:
    - vote-app.local.test
    secretName: vote-app.local.test
  ingressClassName: nginx
  rules:
    - host: vote-app.local.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: voting-service # Cюда вписываем названием СЕРВИСА получить его можно kubectl get svc -n monitoring
              port:
                number: 80
